--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/DouglasCarvalhoPereira/conect_pub/blob/main/dist/index.html">
+<meta http-equiv="refresh" content="0; url="https://douglascarvalhopereira.github.io/conect_pub/dist/index.html">
