--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">ACESSAR AGORA</a>
             </div>
         </header>
-        <!-- About-->
+        
+
+         <!-- About-->
          <section class="page-section" id="about">
              <div class="container">
                  <div class="text-center">
@@ -382,12 +384,11 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <!---- <script src="js/scripts.js"></script>
+        <script src="js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *--> 
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
-
