--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Conect Pub Tendency</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/fivicon.png"/>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -27,6 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#page-top">INICIO</a></li>
                         <li class="nav-item"><a class="nav-link" href="#pratos">PRATOS & PORÇÕES</a></li>
                         <li class="nav-item"><a class="nav-link" href="#bebidas">BEBIDAS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#drinks">DRINKS</a></li>
@@ -866,7 +867,19 @@
                     <h2 class="section-heading text-uppercase">SOBRE</h2>
                     <h4 class="section-subheading text-muted">Um ambiente único e maravilhoso para quem busca sair da rotina. Música ao vivo, comida boa e bebida gelada.</h4>
                     <br>
-        </section>
+                    <div class="">
+                    <h5 class="section-heading text-uppercase">SIGA NOSSAS REDES SOCIAIS</h5>
+                        <br>
+                        <a class="btn btn-dark btn-social mx-2" href="https://api.whatsapp.com/send?phone=5524992769939&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20o%20atendimento." target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/conect.pub/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/conect.pub/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
+                    <br>
+                    <br>
+                </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d58984.894394469855!2d-44.115402152875234!3d-22.48331710997988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x9ebdf7d8c91a55%3A0xb04df0f4dfb55bdf!2sConnect%20pub!3m2!1d-22.4833711!2d-44.080397399999995!5e0!3m2!1sen!2sbr!4v1640622417656!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    
+                </section>
 
 
 
@@ -874,16 +887,13 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2021</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
                     </div>
+                    <br>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Conect Pub 2022 By <a href="https://douglascarvalhopereira.github.io/portifolio/" target="_blank">D.Carvalho</a></div>
+
                 </div>
             </div>
         </footer>
