--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -861,14 +862,14 @@
         </section>
 
           <!-- About-->
-          <section class="page-section" id="about">
+          <section class="page-section bgabout" id="about">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">SOBRE</h2>
                     <h4 class="section-subheading text-muted">Um ambiente único e maravilhoso para quem busca sair da rotina. Música ao vivo, comida boa e bebida gelada.</h4>
                     <br>
                     <div class="">
-                    <h5 class="section-heading text-uppercase">SIGA NOSSAS REDES SOCIAIS</h5>
+                    <h4 class="section-heading text-uppercase">SIGA NOSSAS REDES SOCIAIS E RECEBA ATUALIZAÇÕES</h4>
                         <br>
                         <a class="btn btn-dark btn-social mx-2" href="https://api.whatsapp.com/send?phone=5524992769939&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20o%20atendimento." target="_blank"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/conect.pub/" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -876,11 +877,19 @@
                     </div>
                     <br>
                     <br>
+                    <form class="form-signin" action="https://formspree.io/f/mayvnqeo" method="POST">
+                        <input type="text" name="name" class="form-control" placeholder="Seu nome">
+                        <br>
+                        <input type="text" name="number" class="form-control" placeholder="Seu número">
+                        <div class="checkbox mb-3">
+                        </div>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">ENVIAR</button>
+                      </form>
                 </div>
+                <br>
+                <br>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d58984.894394469855!2d-44.115402152875234!3d-22.48331710997988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x9ebdf7d8c91a55%3A0xb04df0f4dfb55bdf!2sConnect%20pub!3m2!1d-22.4833711!2d-44.080397399999995!5e0!3m2!1sen!2sbr!4v1640622417656!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    
                 </section>
-
 
 
         <!-- Footer-->
