--- a/index.html
+++ b/index.html
@@ -878,8 +878,8 @@
                     <br>
                     <br>
                     <form class="form-signin" action="https://formspree.io/f/mayvnqeo" method="POST">
+                        <h5>CONTATO</h5>
                         <input type="text" name="name" class="form-control" placeholder="Seu nome">
-                        <br>
                         <input type="text" name="number" class="form-control" placeholder="Seu número">
                         <div class="checkbox mb-3">
                         </div>
@@ -891,18 +891,19 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d58984.894394469855!2d-44.115402152875234!3d-22.48331710997988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x9ebdf7d8c91a55%3A0xb04df0f4dfb55bdf!2sConnect%20pub!3m2!1d-22.4833711!2d-44.080397399999995!5e0!3m2!1sen!2sbr!4v1640622417656!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </section>
 
-
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-end">
+                    <p style="color: black;">Address: Av. Beira-Rio, 34 - Volta Grande 3, Volta Redonda - RJ, 27211-300</p>
+                    <a href="tel:+5524992769939" style="text-decoration: none; color: black;"><p>Telefone: (24) 99276-9939</p></a>
+                    <div class="col-lg">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
                     </div>
-                    <br>
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Conect Pub 2022 By <a href="https://douglascarvalhopereira.github.io/portifolio/" target="_blank">D.Carvalho</a></div>
-
+                    <p>Copyright &copy; Conect Pub 2022 By <a href="https://douglascarvalhopereira.github.io/portifolio/" target="_blank" style="text-decoration: none;"">D.Carvalho</a></p>
+          
+                    <br> 
                 </div>
             </div>
         </footer>
