Altearado espaçamento entre elementos mb-4 bootstrap.

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -320,7 +320,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -335,7 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -350,7 +350,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -365,7 +365,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -380,7 +380,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -395,7 +395,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -410,7 +410,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -425,7 +425,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -601,7 +601,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -616,7 +616,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -642,7 +642,7 @@
                     <h3 class="section-subheading text-muted">Ninguém é feliz de verdade antes de tomar o primeiro drink!</h3>
                 </div>
                 <div class="row">
-                    <div class="col-6 col-6 col-lg-4 col-sm-6 mb-4">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             
@@ -663,7 +663,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-6 col-lg-4 col-sm-6 mb-4">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             
@@ -830,7 +830,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -974,7 +974,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -990,7 +990,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -1006,7 +1006,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
@@ -1022,7 +1022,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-4 col-sm-6">
+                    <div class="col-6 col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#">
