Alteração de nome de produtos.

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/torresmo-em-rolo - cortada.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Torresmo em Rolo</div>
+                                <div class="portfolio-caption-heading">Torresmo em Rolo (un)</div>
                                 <div class="portfolio-caption-subheading text-muted">R$ 12,90</div>
                             </div>
                         </div>
@@ -405,7 +405,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/porcao-salgadinhos - cortada.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Porção Salgadinhos</div>
+                                <div class="portfolio-caption-heading">Salgadinhos (Porção)</div>
                                 <div class="portfolio-caption-subheading text-muted">R$ 19,90</div>
                             </div>
                         </div>
@@ -420,7 +420,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/coxinha-fit - cortada.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Coxinha Fit</div>
+                                <div class="portfolio-caption-heading">Coxinha Fit (Porção)</div>
                                 <div class="portfolio-caption-subheading text-muted">R$ 19,90</div>
                             </div>
                         </div>
@@ -1082,7 +1082,7 @@
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
                     </div>
-                    <p>Copyright &copy; Conect Pub 2022 By <a href="https://douglascarvalhopereira.github.io/portifolio/" target="_blank" style="text-decoration: none;"">D.Carvalho</a></p>
+                    <p>Copyright &copy; Conect Pub 2022 Desenvolvido por <a href="https://douglascarvalhopereira.github.io/portifolio/" target="_blank" style="text-decoration: none;"">D.Carvalho</a></p>
           
                     <br> 
                 </div>
