Site otimzado, arquivos node excluídos.

--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
                     <form class="form-signin" action="https://formspree.io/f/mayvnqeo" method="POST">
                         <h5>CONTATO</h5>
                         <input type="text" name="name" class="form-control" placeholder="Seu nome">
-                        <input type="text" name="number" class="form-control" placeholder="Seu número">
+                        <input type="text" name="number" class="form-control mt-2" placeholder="Seu número">
                         <div class="checkbox mb-3">
                         </div>
                         <button class="btn btn-lg btn-primary btn-block" type="submit">ENVIAR</button>
